More restructuring to enable pip install packaging

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = madym_qbi
-version = attr: madym.__version__
+name = QbiPy
+version = attr: QbiPy.__version__
 author = Michael Berks
 author_email = michael.berks@manchester.ac.uk
-description = Python wrappers to the Madym C++ toolkit
+description = DCE-MRI analysis code from the QBI lab, University of Manchester
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://gitlab.com/manchester_qbi/manchester_qbi_public/madym_python
+url = https://gitlab.com/manchester_qbi/manchester_qbi_public/qbipy
 project_urls =
-    Bug Tracker = https://gitlab.com/manchester_qbi/manchester_qbi_public/madym_python/-/issues
+    Bug Tracker = https://gitlab.com/manchester_qbi/manchester_qbi_public/qbipy/-/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: Apache-2.0 License
@@ -21,6 +21,9 @@ packages = find:
 python_requires = >=3.6
 install_requires =
     numpy
+    scipy
+    scikit-image
+    PyQt5
 
 [options.packages.find]
 where = src
