--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ pytest:
   image: python:3.7
   stage: test
   script:
+    - pip install pytest
     - pytest --junitxml=report.xml
   artifacts:
     when: always
