--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ pytest:
   image: python:3.7
   stage: test
   script:
-    - pip install pytest
+    - pip install pytest numpy scipy scikit-image
     - pytest --junitxml=report.xml
   artifacts:
     when: always
