Fixed license code in setup.cfg [ci skip]

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ project_urls =
     Bug Tracker = https://gitlab.com/manchester_qbi/manchester_qbi_public/qbipy/-/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: Apache-2.0 License
+    License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
 
 [options]
