--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ pip-delete-this-directory.txt
 
 # Unit test / coverage reports
 htmlcov/
+html/
 .tox/
 .nox/
 .coverage
@@ -110,6 +111,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Qt
+.qt_*
 
 # Spyder project settings
 .spyderproject
