Lets get auto-versioning working. Also added dockerfile used to create the image used in CI pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,3 +46,5 @@ fetch-semantic-version:
   script:
     - npm install @semantic-release/gitlab @semantic-release/exec @semantic-release/changelog
     - npx semantic-release
+  artifacts:
+    - VERSION.txt
