--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -10,7 +10,7 @@ plugins:
   }]
   - "@semantic-release/release-notes-generator"
   - - "@semantic-release/exec"
-    - verifyReleaseCmd: "version.sh ${nextRelease.version}"
+    - verifyReleaseCmd: "ls"
   - - "@semantic-release/changelog"
     - changelogFile: CHANGELOG.md
   - "@semantic-release/gitlab"
