--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   - test
   - pages
   - fetch-version
+  - deploy
 
 before_script:
   - git fetch --tags
@@ -46,3 +47,20 @@ fetch-semantic-version:
   script:
     - npm install @semantic-release/gitlab @semantic-release/exec @semantic-release/changelog
     - npx semantic-release
+
+  pypi_release:
+    stage: deploy
+    cache: {}
+    script:
+      - pip install -U twine
+      - version.sh
+      - python setup.py sdist bdist_wheel
+      - twine check dist/*
+      # upload to oficial
+      - twine upload --repository-url https://upload.pypi.org/legacy/ dist/*
+      - pip install helpdev==$CI_COMMIT_TAG
+      - helpdev --version
+      - pip uninstall helpdev -y
+  only:
+    - master
+    - /^release-.*$/
